# libbluos_ssc_ipc

./: .gitignore  Makefile  README.md  bluos_ssc.cfg.example  bundle_arm.sh  ipc_structs.c  ipc_structs.h  libbluos_ssc_ipc.c  libbluos_ssc_ipc.h  meson.build  shm_server.c
mqa-files/: Makefile  README.md  bits.c  bits.h  bluos_ssc.c  bluos_ssc.h  meson.build  mqa-common.c  mqa-common.h  mqaplay_ipc.c  mqascan.c  mqascan.h  sfbits.c  sfbits.h
mqa-files/arm/: bits.d  blake2s-ref.d  bluos_ssc.d  mqa-common.d  mqa-keys.d  mqaplay_ipc  mqaplay_ipc.d  mqascan.d  sfbits.d
mqa-files/x86_64/: bits.d  blake2s-ref.d  mqa-common.d  mqa-keys.d  mqascan.d  sfbits.d
packaging/: PKGBUILD  bluos_ssc.cfg
samples/: sndfile_portaudio.c
sync/: drepper_mutex.c  drepper_mutex.h  fxsem.c  fxsem.h  sync.c  sync.h
